[package]
name = "jekyll-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.6", default-features = false, features = ["rb-sys"] }
once_cell = "1.19"
regex = "1.11"
deunicode = "1.4"
percent-encoding = "2.3"
globset = "0.4"
serde_yaml = "0.9"
tokio = { version = "1.39", features = ["rt", "rt-multi-thread", "sync", "time", "net", "signal", "macros"] }
hyper = { version = "0.14", features = ["full"] }
mime_guess = "2.0"
tokio-tungstenite = "0.23"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1"
flate2 = "1.0"
brotli = "3.3"
